# llms-from-scratch-burn

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: ch02.rs  ch03.rs  ch04.rs  ch05.rs
src/: attention.rs  backend.rs  dataset.rs  gpt.rs  lib.rs  tokenizer.rs  train.rs
